fix bug 197429 "clear disk cache broken on MacOS X". Rederive mCacheDirectory from parent after moving old mCacheDirectory to Cache.Trash for deletion, rather than operate on clone of mCacheDirectory. r=bryner sr=sfraser.